# DDC_mirror

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SWA.sln
GameEngine/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  BaseScene.h  EntityManager.h  GameEngine.vcxproj  GameEngine.vcxproj.filters  Json.h  JsonHelper.cpp  JsonHelper.h  QuadTree.cpp  QuadTree.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h  TextureRenderer.cpp  TextureRenderer.h  Timer.cpp  Timer.h  UserInput.cpp  UserInput.h  json.hpp  rect2d.h  vector2d.cpp  vector2d.h
SWA/: 08_geometry_rendering.cpp  39_tiling.cpp  AIComponent.h  AISystem.cpp  AISystem.h  Advertisement.cpp  Advertisement.h  AnimationComponent.h  AnimationFacade.cpp  AnimationFacade.h  AudioSystem.cpp  AudioSystem.h  BaseMenu.h  BaseScene.h  BaseSystem.cpp  BaseSystem.h  CharacterComponent.h  CheatScene.cpp  CheatScene.h  CheatSystem.cpp  CheatSystem.h  ChestComponent.h  ClassDiagram.cd  CollectableComponent.h  CollectableHandlers.cpp  CollectableHandlers.h  CollisionComponent.h  CollisionHandlers.cpp  CollisionHandlers.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  ComponentFactory.cpp  ComponentFactory.h  Constants.h  ControllableComponent.h  Core.cpp  Core.h  Credits.cpp  Credits.h  (+81 more)
SWA/Debug/: vc142.idb
SWA/Debug/SWA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SWA.lastbuildstate
SWA/assets/: lazy.map  lazy.objects  second.map  second.objects  third.map
SWA/assets/Animations/: .smbdeleteBAA46dd4.4  .smbdeleteCAA46dd4.4  .smbdeleteDAA46dd4.4
SWA/assets/Highscores/: highscores.json
SWA/assets/Levels/: 1_zombie.map  1_zombie.objects  3_chorts.objects  army.map  army.objects  boss.map  boss.objects  boss_1.map  boss_1.objects  boss_2.objects  boss_3.objects  gijs.map  gijs.objects  gijs2.map  gijs2.objects  hardcore.map  hardcore.objects  hardcore2.map.map  hardcore2.map.objects  hardcore_2.map  hardcore_2.objects  lazy.map  lazy.map.map  lazy.map.objects  lazy.objects  level_test2.dungeon.map  level_test2.dungeon.objects  leveleditor.map  leveleditor.objects  second.map  second.objects  secret.map  secret.objects  ss_test.objects  temp.map  template.map  testmap.map  testmap.objects  third.map  third.objects  (+3 more)
SWA/assets/Levels/Dungeons/: .dungeon  level_1.dungeon  level_2.dungeon  level_3.dungeon  level_test2.dungeon  level_test2.dungeon.dungeon  leveldungeon.dungeon  leveltest.dungeon
SWA/assets/json/: dung2.json  dungeon2.json  highscores.json  newsave.jpg.json  save.json  savegame.json  test.json  test_save.json  timer test.json
SWA/lib/: CMakeLists.txt  GameEngine.exp  GameEngine.ilk  GameEngine.lib
SWA/x64/Debug/: vc142.idb
SWA/x64/Debug/SWA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SWA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
x64/Debug/: SWA.ilk
